@@ -1,12 +1,7 @@
 {
-  "forge_marker": 1,
-  "defaults": {
-    "textures": {
-    },
-    "custom": { "flip-v": true },
-    "model": "xnet:block/antenna_base.obj"
-  },
-  "variants":{
-    "": { "model": "xnet:block/antenna_base.obj" }
+  "variants": {
+    "": {
+      "model": "xnet:block/antenna_base"
+    }
   }
 }
