@@ -1,17 +1,19 @@
 {
-  "forge_marker": 1,
-  "defaults": {
-    "textures": {
-    },
-    "custom": { "flip-v": true },
-    "model": "xnet:block/antenna_dish.obj"
-  },
   "variants": {
-    "facing": {
-      "north": {},
-      "south": {"y": 180},
-      "west": {"y": 270},
-      "east": {"y": 90}
+    "facing=north": {
+      "model": "xnet:block/antenna_dish"
+    },
+    "facing=south": {
+      "model": "xnet:block/antenna_dish",
+      "y": 180
+    },
+    "facing=west": {
+      "model": "xnet:block/antenna_dish",
+      "y": 270
+    },
+    "facing=east": {
+      "model": "xnet:block/antenna_dish",
+      "y": 90
     }
   }
 }
